[tool.poetry]
name = "pyisaf"
version = "0.1.8"
description = "Python library for i.SAF VAT report generation"
authors = ["Naglis Jonaitis <naglis@versada.eu>"]
license = "BSD"
readme = "README.rst"
repository = "https://github.com/versada/pyisaf"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/versada/pyisaf/issues"

[tool.poetry.dependencies]
python = "^3.6.1"
schema = "^0.6.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88
known_third_party = []
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
multi_line_output = 3
skip = ["tests/data"]
